# diri-helox

./: .docker-compose-rebuild  .gitattributes  .gitignore  .gitmodules  ADMINER_SETUP.md  AI_LAYER_ARCHITECTURE.md  AUTOMATED_SUBMODULE_HOOKS.md  AUTOMATIC_GIT_HOOKS_SETUP.md  AUTO_COMPACT_OPTIONS.md  BACKEND_MIGRATION_COMPLETE.md  BACKEND_MIGRATION_SUMMARY.md  BACKEND_TYPESCRIPT_FIXES.md  BRANCH_PROTECTION.md  BUILD_FIXES_SUMMARY.md  COMMANDS_REFERENCE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SETUP.md  COMPLETE_SYSTEM_SUMMARY.md  COMPLETE_VERIFICATION_CHECKLIST.md  CONTRIBUTING.md  DEV_VS_PROD_SETUP.md  DOCKER-IMAGE-CLEANSING-COMMANDS.md  DOCUMENTATION-INDEX.md  DOCUMENTATION_INDEX.md  Dockerfile.jupyter  ENVIRONMENT_SETUP.md  ENVIRONMENT_VARIABLES.md  FINAL_VERIFICATION_COMPLETE.md  FIND_YOUR_TASKS.md  GETTING_STARTED.md  GET_SPACE_BACK.md  GIT_HOOKS_README.md  HOW_TO_BUILD.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INITIALIZE_SUBMODULES_WORKFLOW.md  JOENEWSUBMODULES.md  LANGCHAIN_INTEGRATION_COMPLETE.md  LICENSE.md  LOG_CONFIGURATION_SUMMARY.md  (+71 more)
.git-hooks/: README.md  post-checkout  post-merge  pre-push
.githooks-template/: README.md  config  post-checkout  post-merge
.github/: pull_request_template.md
api-server/: Dockerfile  SECURITY_AUDIT.md  env.example.api-server  env.example.server  jest.config.js  package-lock.json  package.json  server.js
client/: INVENTORY_FEATURES.md  index.html  package-lock.json  package.json  vite.config.js
configs/: __init__.py  data_config.json  dynamic_pipeline_bandit_config.json  dynamic_pipeline_config.json  dynamic_pipeline_persola_config.json  dynamic_pipeline_stream_config.json  dynamic_pipeline_stream_live_config.json  dynamic_pipeline_stream_postgres_config.json  ml_training_config.json  model_config.json  tiny_lora_config.json  training_config.json  versioned_training_config.json
core/: __init__.py  device_manager.py  gpu_utils.py  mudspeed_gpu.py  reproducibility_controller.py  training_config.py
data/: prepare_dataset.py
data_management/: __init__.py  dataset_versioning_system.py  domain_weighting_engine.py  semantic_deduplication_engine.py  streaming_dataset_manager.py  token_distribution_monitor.py
data_preprocessing/: __init__.py  base.py
data_processing/: __init__.py
data_safety/: data_leakage_detector.py
data_sources/: __init__.py  base.py  composite_source.py  cyrex_training_source.py  factory.py  milvus_source.py  postgres_source.py  self_feedback_source.py  static_source.py  stream_source.py  synthetic_generator.py  synthetic_source.py
diri-cyrex/: BUILD_OPTIMIZATION.md  BUILD_SOLUTION.md  Dockerfile  Dockerfile.build-options.md  Dockerfile.cpu  Dockerfile.jupyter  README_BUILD.md  build-hybrid.ps1  build-hybrid.sh  build.ps1  build.sh  detect_gpu.ps1  detect_gpu.sh  docker-compose.override.yml.example  env.example.diri-cyrex  pytest.ini  requirements-core.txt  requirements.txt
diri_helox/: __init__.py
docs/: AI_SERVICES_OVERVIEW.md  AI_TEAM_ONBOARDING.md  AI_TEAM_STARTER.md  BACKEND_TEAM_ONBOARDING.md  CLOUD-ENGINEERING-DAY1.md  COMPLETE_SYSTEM_SUMMARY.md  CONTRIBUTING.md  CORE_API_QUICK_SUMMARY.md  CORE_API_STATUS.md  DATASET_VERSIONING_GUIDE.md  DATASET_VERSIONING_SYSTEM.md  DETONATOR_IMPLEMENTATION.md  DEV_DEVICE_SPECS.md  DOCKER-IMAGE-CLEANSING-COMMANDS.md  DOCKER_LOG_MANAGEMENT.md  DOCUMENTATION_INDEX.md  FRONTEND_TEAM_ONBOARDING.md  FULLY_IMPLEMENTED_AND_INTEGRATED.md  GENERATING_SYNTHETIC_DATA.md  HELOX_POSTGRES_MIRROR_CONTRACT.md  HOMEPAGE_COMPONENTS_ANALYSIS.md  HYPERPARAMETER_OPTIMIZATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  JWT_TOKEN_REFRESH_ROTATION.md  LOG_INSPECTION_GUIDE.md  MAKEFILE-EXPLANATION.md  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_SETUP.md  MLOPS_TEAM_ONBOARDING.md  ML_ENGINEER_COMPLETE_GUIDE.md  MONGODB_TO_POSTGRESQL_MIGRATION.md  PII_DETECTION_AND_ANONYMIZATION_GUIDE.md  PLATFORM_TEAM_ONBOARDING.md  PRODUCTION_BUILD.md  QUICK-START-SCRIPTS.md  QUICK_FIX_MINIKUBE.md  RATE_LIMITING_REQUEST_THROTTLING.md  README-CLEANUP.md  README-REBUILD.md  (+27 more)
evaluation/: __init__.py  automatic_evaluation_harness.py  inference_parity_tester.py  model_evaluator.py
examples/: README.md  __init__.py  complete_training_example.py  deepiri_integration_example.py  integration_example.py
experiments/: __init__.py  research_experiment_template.py
frontend/: .gitignore  Dockerfile  Dockerfile.dev  FRONTEND_DEBUG_GUIDE.md  HMR_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  debug-setup.js  env.example.client  env.example.frontend  index.html  nginx.conf  package-lock.json  package.json  replace-framer-motion.js  start-dev.js  vite.config.js
helox_http/: app.py  training_api.py
helox_sdk/: README.md  pyproject.toml
helox_sdk/deepiri_helox_sdk/: __init__.py  device.py
helox_sdk/deepiri_helox_sdk/evaluation/: __init__.py  benchmark.py  categories.py  classifier.py  cli.py  comparison.py  generation.py  harness.py  metrics.py  parity.py  regression.py  report.py  samples.py  schemas.py
helox_sdk/tests/: test_benchmark.py  test_cli.py  test_comparison.py  test_generation.py  test_harness.py  test_metrics.py  test_regression.py  test_samples.py
helox_sdk/tests/fixtures/: generation_suite.jsonl  intent_holdout.jsonl
helox_trace_ml/: README.md  pyproject.toml
helox_trace_ml/deepiri_helox_trace/: __init__.py  features.py  ingest.py  pipeline.py  training.py
helox_training_core/: README.md  pyproject.toml
helox_training_core/deepiri_helox_training/: __init__.py  callbacks.py  checkpoint.py  config.py  data.py  metrics.py  trainer.py
helox_training_core/tests/: test_primitives.py
http/: app.py  training_api.py
integrations/: __init__.py  cyrex_rag_bridge.py  rag_aware_training_integration.py  realtime_ingestion.py  synapse_event_publisher.py
migrations/: 001_create_dataset_versions.sql
mlops/: __init__.py  experiment_tracker.py  lora_training.py  training_bridge.py  training_job_worker.py
model_export/: format_exporter.py
model_management/: __init__.py  model_provenance_system.py
observability/: __init__.py  data_ingestion_logger.py  (+2 more)
(+1025 files in other folders)
