[tool.poetry]
name = "diri-helox"
version = "0.1.0"
description = "ML training pipelines, model development, and research for Deepiri platform"
readme = "README.md"
authors = ["Deepiri Team"]
license = "MIT"
# Note: This is a script-based project, not a package
# Packages are organized as modules in the root directory

[tool.poetry.dependencies]
python = "^3.11"

# ML Training Dependencies
torch = "^2.0.0"
transformers = "^4.35.0"
accelerate = "^0.24.0"
datasets = "^2.14.0"
mlflow = "^2.8.0"
optuna = "^3.4.0"
wandb = "^0.15.0"

# Data processing
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"

# Tokenization
sentencepiece = "^0.1.99"

# Model components
einops = "^0.7.0"

# Model evaluation
evaluate = "^0.4.0"
rouge-score = "^0.1.2"

# Model export
onnx = "^1.14.0"
onnxruntime = "^1.15.0"

# Event streaming (Synapse integration)
redis = "^5.0.0"
hiredis = "^2.2.0"

# Embeddings for semantic deduplication
sentence-transformers = "^2.2.0"

# Utilities
tqdm = "^4.66.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
# Development tools
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipython = "^8.0.0"
pytest = "^7.0.0"
black = "^23.0.0"
mypy = "^1.0.0"
ruff = "^0.1.0"

[tool.poetry.group.optional.dependencies]
# Privacy & security (optional)
presidio-analyzer = "^2.2.0"
presidio-anonymizer = "^2.2.0"

# Attention optimizations (optional, install separately if needed)
# flash-attn = "^2.0.0"  # Install separately: pip install flash-attn --no-build-isolation

[tool.poetry.group.visualization.dependencies]
# Visualization tools (optional)
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

[tool.poetry.scripts]
# Add any CLI scripts here if needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

