[tool.poetry]
name = "diri-helox"
version = "0.1.0"
description = "ML training pipelines, model development, and research for Deepiri platform"
readme = "README.md"
authors = ["Deepiri Team"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
deepiri-dataset-processor = {path = "./deepiri-dataset-processor", extras = ["all"], develop = true}

# ML Training Dependencies
torch = "^2.0.0"
transformers = "^4.35.0"
accelerate = "^0.24.0"
datasets = "^2.14.0"
mlflow = "^2.8.0"
optuna = "^3.4.0"
wandb = "^0.15.0"

# Data processing
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"

# Tokenization
sentencepiece = "^0.1.99"

# Model components
einops = "^0.7.0"

# Model evaluation
evaluate = "^0.4.0"
rouge-score = "^0.1.2"

# Model export
onnx = "^1.14.0"
onnxruntime = "^1.15.0"

# Event streaming (Synapse integration)
redis = "^5.0.0"
hiredis = "^2.2.0"

# Embeddings for semantic deduplication
sentence-transformers = "^2.2.0"

# Utilities
tqdm = "^4.66.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
# Development tools
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipython = "^8.0.0"
pytest = "^7.0.0"
black = "^23.0.0"
mypy = "^1.0.0"
ruff = "^0.1.0"

[tool.poetry.group.optional.dependencies]
# Privacy & security (optional)
presidio-analyzer = "^2.2.0"
presidio-anonymizer = "^2.2.0"

# Attention optimizations (optional, install separately if needed)
# flash-attn = "^2.0.0"  # Install separately: pip install flash-attn --no-build-isolation

[tool.poetry.group.visualization.dependencies]
# Visualization tools (optional)
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

[tool.poetry.scripts]
# Add any CLI scripts here if needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
# Exclude pre-existing files/dirs with lint issues and submodules
extend-exclude = [
    "deepiri-dataset-processor",
    "core",
    "examples",
    "experiments",
    "integrations",
    "mlops",
    "model_export",
    "observability",
    "tokenization",
    "docker_test_versioning.py",
    "test_docker_simple.py",
    "test_simple_standalone.py",
    "test_standalone_versioning.py",
    "test_versioning.py",
    "pipelines/data_preprocessing",
    "pipelines/data_processing",
    "pipelines/training/bandit_training.py",
    "pipelines/training/data_collection_pipeline.py",
    "pipelines/training/distributed_training.py",
    "pipelines/training/full_training_pipeline.py",
    "pipelines/training/ml_training_pipeline.py",
    "pipelines/training/rag_training_pipeline.py",
    "pipelines/training/versioned_training_pipeline.py",
    "training/attention_optimization_hooks.py",
    "training/continual_learning_hooks.py",
    "training/curriculum_learning_scheduler.py",
    "training/gradient_monitoring_system.py",
    "training/instruction_finetuning_trainer.py",
    "training/instruction_formatting_abstraction.py",
    "training/multi_objective_trainer.py",
    "training/numerical_stability_manager.py",
    "training/optimizer_state_sharding.py",
    "training/precision_aware_layer_control.py",
    "training/pretraining_trainer.py",
    "training/unified_training_orchestrator.py",
    "scripts/generate_synthetic_b2b_data.py",
    "scripts/generate_synthetic_b2b_data_v2.py",
    "scripts/train_instruction_finetuning.py",
    "scripts/train_llm_from_scratch.py",
    "scripts/train_with_full_features.py",
    "scripts/setup_llm_training_env.py",
    "scripts/dataset_versioning_cli.py",
    "scripts/evaluation/evaluate_model.py",
    "scripts/evaluation/test_sentence_validation.py",
    "scripts/training/train_challenge_generator.py",
    "scripts/training/train_multi_armed_bandit.py",
    "scripts/training/train_personalization_model.py",
    "scripts/training/train_policy_network.py",
    "scripts/training/train_task_classifier.py",
    "scripts/training/train_transformer_classifier.py",
    "tests/test_data_preprocessing_pipeline.py",
    "tests/test_dataset_versioning.py",
    "tests/test_import.py",
    "evaluation/automatic_evaluation_harness.py",
    "evaluation/inference_parity_tester.py",
]

[tool.ruff.lint]
per-file-ignores = {"tests/*" = ["E402"], "scripts/*" = ["E402"], "data_sources/synthetic_source.py" = ["E402"], "pipelines/training/dynamic_training_pipeline.py" = ["E402"]}

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
# Use importlib mode so the root __init__.py is not treated as a package init
addopts = "--import-mode=importlib"

