[tool.poetry]
name = "deepiri-helox-trace"
version = "0.1.0"
description = "Reproducible PyTorch trace ingest, featurization, CSV splits, and sklearn adapter training (shared by Mudspeed and other services)."
authors = ["Deepiri Team"]
license = "MIT"
readme = "README.md"
packages = [{ include = "deepiri_helox_trace" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
scikit-learn = "^1.4"
joblib = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
